2000-06-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/list.test:  Use cons* instead of list*.

2000-06-13  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* tests/numbers.test, tests/list.test: Updated for new
	documentation module.

2000-05-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/hooks.test:  make-hook-with-name is deprecated.

2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/list.test, tests/numbers.test:  Added.

2000-05-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* guile-test:  Eliminate use of catch-test-errors.

	* lib.scm:  Adopted a couple of nice ideas from Greg.

	(pass, fail, expect-failure, expect-failure-if,
	expect-failure-if*, catch-test-errors, catch-test-errors*,
	expected-failure-fluid, pessimist?):  Removed.

	(run-test, expect-fail, result-tags, important-result-tags):
	Added.

	(report, make-count-reporter, print-counts, make-log-reporter,
	full-reporter, user-reporter):  Reporters take two mandatory
	arguments and make use of the tag descriptions in result-tags and
	important-result-tags.

	* tests/alist.test, tests/hooks.test, tests/ports.test,
	tests/weaks.test:  Don't use catch-test-errors and
	expect-failure-if.

2000-05-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* mambo.test:  Removed dummy file.

2000-03-31  Gary Houston  <ghouston@arglist.com>

	* tests/ports.test (non-blocking-I/O): a couple more details:
	a) combine the O_NONBLOCK flag with the default flags instead
	of replacing them.  b) check EWOULDBLOCK as well as EAGAIN.

2000-03-22  Jim Blandy  <jimb@savonarola.red-bean.com>

	* lib.scm: Doc fixes.

Sun Jan 16 14:01:51 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* paths.scm: Assume that ~/guile-core/test-suite is the location
	of the test suite now.

	* tests/version.test: Added -- version.c had 0% coverage before,
	now at 100%.

	* tests/chars.test: Added -- needed test of char-is-both?.

1999-12-22  Greg Harvey <Greg.Harvey@thezone.net>

	* tests/weaks.test, tests/hooks.test: Added.
