@@ -1,3 +1,7 @@
+2000-06-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* tests/eval.test:  Added.
+
 2000-06-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* tests/list.test:  Use cons* instead of list*.
